# cplusplusplus

./: .gitignore  CMakeLists.txt  FAQ.md  INSTALL.md  README.md  package-lock.json  package.json  test_cplusplusplus.cpp  tsconfig.json
docs/: DESIGN.md  USAGE.md
examples/: CMakeLists.txt  basic_syntax.cpp  error_propagation.cpp  interface.cpp  parallel_for.cpp  pattern_matching.cpp  pipe_operator.cpp  property.cpp  random.cpp  run.bat  run.sh
include/CPlusPlusPlus/: All.h  CPlusPlusPlus.h  Container.h  ControlFlow.h  DataStructures.h  Features.h  OOP.h  Random.h
lib/CPlusPlusPlus/: CMakeLists.txt  CPlusPlusPlus.cpp  Features.cpp  Lexer.cpp  Parser.cpp  Transformer.cpp
src/: extension.ts
src/compiler/: compiler.ts  parser.ts
src/language/: grammar.json  snippets.json
src/utils/: config.ts  status.ts
tests/: test_container.cpp  test_controlflow.cpp  test_datastructures.cpp  test_oop.cpp  test_random.cpp
